feat(repositories): add posts and users API repositories
feat(repositories): add posts and users API repositories

- Create src/repositories folder with repository pattern for API calls
- Implement postsRepository with CRUD operations (getPosts, getPostById, createPost, updatePost, deletePost)
- Implement usersRepository with CRUD operations (getUsers, getUserById, createUser, updateUser, deleteUser)
- Add typed interfaces (Post, User) for type safety
- Update posts page components to use repository pattern instead of direct http calls
- Refactor query keys for better cache management
- Remove duplicate interface definitions from components

Amp-Thread-ID: https://ampcode.com/threads/T-019c0935-c15a-778f-8e3a-82d6ed5f1775

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -64,5 +64,11 @@
     "postNotFound": "Post not found",
     "postNumber": "Post #",
     "authorId": "Author ID"
+  },
+  "notFound": {
+    "title": "Page Not Found",
+    "message": "Oops! The page you're looking for doesn't exist.",
+    "backHome": "Back to Home",
+    "goBack": "Go Back"
   }
 }
